<resources>
    <string name="app_name">BraveTogether_VolunteerApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_app_id">3786422741385585</string>
    <string name="fb_login_protocol_scheme">fb3786422741385585</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="textviewCoins">textViewCoinsNum</string>
    <string name="textviewDescription">\@string/textviewDescription</string>
    <string name="textviewEvent">textviewEvent</string>
    <string name="textviewTime">textviewTime</string>
    <string name="textviewLocation">textviewLocation</string>
    <string name="textviewDate">textviewDate</string>
    <string name="apiUrl">http://35.214.78.251:8080/</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todoDescription">מה אעשה בהתנדבות?</string>
    <string name="placeDescription">על המקום</string>
    <string name="volunteerName">שם התנדבות</string>
    <string name="chooseDate">בחר תאריך</string>
    <string name="pick_time">בחר שעה</string>
    <string name="createVolunteerHeadline">יצירת התנדבות</string>
    <string name="addPicText">הוסף תמונה</string>
    <string name="media_camera">media_camera</string>
    <string name="notificationHeadline">התראות</string>
    <string name="createAcount">יצירת חשבון</string>
    <string name="time_headline">זמנים</string>
    <string name="time_text">תודיע לי על התנדבויות בטווח זמנים מסויים</string>
    <string name="location_text">תודיע לי על התנדבויות קרובות אליי</string>
    <string name="location_headline">מיקום</string>
    <string name="nextPage">הבא</string>

    <string name="Lets_volunteer">יאללה בוא נתנדב</string>
    <string name="loc_acc_text">הרשאה למיקום שלי</string>

    <!-- activity_create_account_first -->

    <!-- Text Edits -->
    <string name="privateName">שם פרטי</string>
    <string name="familyName">שם משפחה</string>
    <string name="password">סיסמה</string>
    <string name="passwordVerification">אימות סיסמה</string>
    <string name="email">אימייל</string>
    <string name="phone">פלאפון</string>
    <string name="address">כתובת מגורים</string>
    <string name="about">כמה מילים עליך</string>

    <!-- Validations -->
    <string name="invalid_private_name">הכנס את השם הפרטי שלך</string>
    <string name="invalid_family_name">הכנס את שם המשפחה שלך</string>
    <string name="invalid_mobile">הכנס מספר טלפון תקין</string>
    <string name="invalid_email">הכנס כתובת אימייל תקינה</string>
    <string name="invalid_password">סיסמא חייבת להכיל לפחות 8 תווים וביניהם: אות אנגלית גדולה, אות אנגלית קטנה, תו מיוחד וספרה</string>
    <string name="invalid_confirm_passwords">הסיסמאות לא תואמות</string>
    <string name="invalid_address">בבקשה הכנס כתובת תקינה</string>

    <string name="invalid_volunteer_name">הכנס את שם ההתנדבות</string>
    <string name="invalid_value_in_coins">הכנס את השווי בגבורות</string>
    <string name="invalid_about_volunteer">הכנס מידע על ההתנדבות</string>


    <string-array name="time_windows">
        <item name="morning">בוקר</item>
        <item name="noon">צהריים</item>
        <item name="evening">ערב</item>
    </string-array>

    <string-array name="time_windows_hours">
        <item name="morning">08:00-15:00</item>
        <item name="noon">15:00-18:00</item>
        <item name="evening">19:00-22:00</item>
    </string-array>


    =======
    <string name="עוד" />
    <string name="todo" />
    <string name="happy_to_see_you_again">happy_to_see_you_again</string>
    <string name="stories">stories</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_results">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    >>>>>>> Stashed changes

</resources>