<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingConstraints"
    android:fillViewport="false"
    tools:context=".CreateAccountFirstActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".CreateAccountFirstActivity">

                <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/ic_menu_camera"
                app:civ_border_color="#FF000000"
                app:civ_border_width="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createAccTextView" />

            <TextView
                android:id="@+id/createAccTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/createAcount"
                android:textColor="#350016"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/backButtonImageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/top_back_arrow_24"
                tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/addImageButtonImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="136dp"
                    android:layout_marginEnd="144dp"
                    android:layout_marginRight="144dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/profile_image"
                    app:srcCompat="@drawable/add_circle_24"
                    tools:ignore="VectorDrawableCompat" />

                <EditText
                android:id="@+id/privateNameEditText"
                android:layout_width="325dp"
                android:paddingRight="50dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:background="@drawable/textfield_d"
                android:ems="10"
                android:hint="@string/privateName"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />

            <EditText
                android:id="@+id/familyNameEditText"
                android:layout_width="325dp"
                android:paddingRight="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/textfield_d"
                android:ems="10"
                android:hint="@string/familyName"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/privateNameEditText" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/textfield_d"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/familyNameEditText" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:paddingVertical="10dp"
                android:paddingRight="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/textfield_d"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:paddingVertical="10dp"
                android:paddingRight="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/textfield_d"
                android:ems="10"
                android:hint="@string/passwordVerification"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                android:ellipsize="start"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

            <EditText
                android:id="@+id/PhoneNumber"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/textfield_d"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="right"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingVertical="10dp"
                android:paddingRight="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

            <EditText
                android:id="@+id/Address"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/textfield_d"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="right"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:paddingVertical="10dp"
                android:paddingRight="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PhoneNumber" />

            <EditText
                android:id="@+id/About"
                android:layout_width="325dp"
                android:layout_height="123dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/textfield_d"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="right"
                android:hint="@string/about"
                android:inputType="text"
                android:paddingVertical="10dp"
                android:paddingRight="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Address" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="130dp"
                android:layout_marginRight="130dp"
                android:background="@drawable/big_blue_button"
                android:text="@string/Lets_volunteer"
                android:textColor="#FFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/About" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>

