<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/calender"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838"
        app:srcCompat="@drawable/calender" />

    <ImageView
        android:id="@+id/location"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDate"
        app:layout_constraintEnd_toStartOf="@+id/textViewDate"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewDate"
        app:srcCompat="@drawable/location" />

    <ImageView
        android:id="@+id/clock"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/textViewLocation"
        app:layout_constraintEnd_toStartOf="@+id/textViewLocation"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewLocation"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/clock" />

    <ImageView
        android:id="@+id/imageViewCoins"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/calender"
        app:layout_constraintEnd_toEndOf="@+id/calender"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/coin" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:gravity="right"
        android:text="@string/textviewDate"
        android:textAlignment="gravity"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/calender"
        app:layout_constraintEnd_toStartOf="@+id/calender"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/calender"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:gravity="right"
        android:text="@string/textviewLocation"
        android:textAlignment="gravity"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/location"
        app:layout_constraintEnd_toStartOf="@+id/calender"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/location"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:gravity="right"
        android:text="@string/textviewTime"
        android:textAlignment="gravity"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/clock"
        app:layout_constraintEnd_toStartOf="@+id/calender"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/clock"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewEvent"
        android:layout_width="256dp"
        android:layout_height="34dp"
        android:text="@string/textviewEvent"
        android:gravity="right"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@+id/calender"
        app:layout_constraintEnd_toEndOf="@+id/calender"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="256dp"
        android:layout_height="18dp"
        android:layout_marginBottom="24dp"
        android:gravity="right"
        android:text="@string/textviewDescription"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@+id/calender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEvent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewCoinsNum"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="@string/textviewCoins"
        android:gravity="right"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@+id/calender"
        app:layout_constraintEnd_toStartOf="@+id/imageViewCoins"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewCoins"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>