<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="231dp"
    android:layout_height="78dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewshare"
            android:layout_width="195dp"
            android:layout_height="24dp"
            android:layout_marginTop="5dp"
            android:text="@string/textviewDescription"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toEndOf="@+id/location"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLocation" />

        <TextView
            android:id="@+id/textViewDescription3"
            android:layout_width="194dp"
            android:layout_height="24dp"
            android:text="@string/textviewDescription"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toStartOf="@+id/imageOfVolunteer"
            app:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintStart_toStartOf="@+id/linearLayout2" />


        <ImageView
            android:id="@+id/imageOfVolunteer"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/todo"
            android:cropToPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.428" />

        <ImageView
            android:id="@+id/location"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
            app:layout_constraintEnd_toStartOf="@+id/imageOfVolunteer"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescription3"
            app:srcCompat="@drawable/gps_line_black" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="63dp"
            android:layout_height="17dp"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:text="@string/textviewLocation"
            android:textAlignment="gravity"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/location"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescription3" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
